objects/AlexCustomObject__c.object
<CustomObject>
    <fields>
        <fullName>ADate__c</fullName>
        <label>ADate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ANumberField__c</fullName>
        <label>ANumberField</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ATextField__c</fullName>
        <label>ATextField</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnEmail__c</fullName>
        <label>AnEmail</label>
        <type>Email</type>
    </fields>
    <label>AlexCustomObject</label>
    <nameField>
        <label>AlexCustomObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AlexCustomObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>